# shockbridge-research-lab

./: .gitignore  CITATION.cff  DATA_POLICY.md  Dockerfile  LICENSE  Makefile  NOTICE.md  PORTFOLIO_MAP.md  PUBLIC_EVIDENCE_BOUNDARY.md  README.md  add_public_citation_footer.py  add_readme_public_graphic.py  fix_repo_formatting.py  pyproject.toml  requirements.txt  update_readme_question_graphic.py
.github/workflows/: tests.yml
data/public/: public_cross_asset_prices.csv
docs/: DATA_SOURCES_PUBLIC.md  METHODOLOGY_OVERVIEW_PUBLIC.md  PUBLIC_PRIVATE_BOUNDARY.md  methodology_note.md  model_limitations.md  research_question.md  validation_framework.md
examples/: build_real_data_desk_page.py  generate_public_question_graphic.py  generate_public_research_brief.py  generate_regime_question_one_page.py  generate_research_desk_pdf.py  public_research_snapshot_v4_3.csv  run_full_pipeline.py
reports/: example_research_report.md  public_research_brief.md  regime_question_one_page.html
src/shockbridge_lab/: __init__.py
src/shockbridge_lab/backtesting/: overlay.py
src/shockbridge_lab/dependence/: dependence_demo.py
src/shockbridge_lab/features/: market_features.py
src/shockbridge_lab/ingestion/: loaders.py
src/shockbridge_lab/ml/: regime_classifier.py
src/shockbridge_lab/reporting/: report_writer.py
src/shockbridge_lab/signal_processing/: energy_demo.py
src/shockbridge_lab/validation/: time_split.py
tests/: test_features.py  test_project_structure.py  test_public_pipeline_output.py  test_research_desk_pdf_one_page.py  test_validation_and_backtest.py
(+1 files in other folders)
